<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Allow for scroll view -->
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!-- profile photo section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_photo_title" >
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false" >

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true" >
                    <requestFocus />
                </ImageView>

                <Button
                    android:id="@+id/button_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:onClick="selectChange"
                    android:text="@string/ui_change_button" >
                </Button>
            </LinearLayout>

            <!-- name section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_name_title" >
            </TextView>

            <EditText
                android:inputType="textPersonName"
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ui_edit_name" />

            <!-- email section-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_email_title" >
            </TextView>

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ui_edit_email" />

            <!-- phone section-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_phone_title" >
            </TextView>

            <EditText android:inputType="phone"
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ui_edit_phone" />

            <!-- gender section-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_gender_title" >
            </TextView>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_female_title"/>

                <RadioButton
                    android:id="@+id/radioButton_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/ui_male_title" />

            </RadioGroup>

            <!-- class section-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_class_title" >
            </TextView>

            <EditText android:inputType="number"
                android:id="@+id/edit_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ui_edit_class" />

            <!-- major section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_major_title" >
            </TextView>

            <EditText
                android:inputType="text"
                android:id="@+id/edit_major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ui_edit_major" />

            <!-- save or cancel section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:onClick="selectSave"
                    android:text="@string/ui_save_button" >
                </Button>

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:onClick="selectCancel"
                    android:text="@string/ui_cancel_button" >
                </Button>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>