<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_start"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Input type -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/ui_input_type_title" >
    </TextView>

    <Spinner
        android:id="@+id/spinnerInputType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:entries="@array/ui_input_type_spinner_list" >
    </Spinner>

    <!-- Activity type -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/ui_activity_type_title" >
    </TextView>

    <Spinner
        android:id="@+id/spinnerActivityType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:entries="@array/ui_activity_type_spinner_list" >
    </Spinner>

    <Button
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/ui_start_button" >
    </Button>

    <Button
        android:id="@+id/button_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/ui_sync_button" >
    </Button>

</LinearLayout>